--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -72,4 +72,5 @@
 @import "ku-social-boxtop.less";
 //@import "ku-gridboxes-bootstrap.less";
 @import "ku-misc.less";
+@import "ku-legacy.less";
 @import "ku-editor-overrides.less";
