--- a/less/ku-legacy.less
+++ b/less/ku-legacy.less
@@ -1,7 +1,8 @@
 //
-// CSS for legacy elements - delete when nesseary.
+// CSS for legacy CMS elements - delete when nesseary.
 // --------------------------------------------------
-// Nyhedsbokse
+
+// Gamle nyhedsbokse
 
 .gcitem {
   &.nyhed {
