--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -722,6 +722,20 @@
     }
   }
 }
+@media (min-width: @screen-sm) {
+  .single-column .column1 {
+    .gridbox {
+      &.size2, &.size3 {
+        &.with-img {
+          .box1 {
+            border-right: 0;
+            white-space: normal;
+          }
+        }
+      }
+    }
+  }
+}
 @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
   // Tablet: For full-width frontpage only
   .FullWidthFrontpage {
