--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -728,8 +728,10 @@
       &.size2, &.size3 {
         &.with-img {
           .box1 {
-            border-right: 0;
-            white-space: normal;
+            .header {
+              border-right: 0;
+              white-space: normal;
+            }
           }
         }
       }
