--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -513,7 +513,6 @@
 /*
 * Mobile: All column types must behave like single column boxes
 */
-
 .gridbox {
   .all-single-column();
 
@@ -647,13 +646,15 @@
     }
 
     &.with-img {
-      &.size2, &.size3 {
+      &.size2,
+      &.size3 {
         .box1 {
           .header {
             border-right: 0;
             white-space: normal;
           }
         }
+
         .box2 {
           img {
             // Testing alternative positioning of images in tablet view
@@ -665,6 +666,7 @@
           }
         }
       }
+
       .text {
         display: block;
       }
@@ -806,6 +808,7 @@
           color: inherit;
         }
       }
+
       &.size1 {
         &.with-img {
           .box2 {
@@ -941,8 +944,10 @@
         }
       }
     }
-    &.with-img {
-      &.size2, &.size3 {
+
+    .size2,
+    .size3 {
+      &.with-img {
         .box1 {
           .header {
             border-right: 0;
