--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -36,6 +36,7 @@ body {
   text-rendering: optimizeLegibility;
   font-family: @font-family-base;
   font-size: @font-size-base;
+  font-weight: 400;
   line-height: @line-height-base;
   color: @text-color;
   background-color: @body-bg;
