--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -179,6 +179,9 @@
           border: 1px solid @brown-hover;
         }
       }
+      &::before {
+        color: @brown;
+      }
     }
 
     &.full {
