Truncate text in news

--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -48,7 +48,7 @@
             <ul class="dropdown-menu nyheder">
                 <li>
                     <img src="https://placehold.it/55x55" alt="">
-                    <a href="#">Danmarks rigshospital for dyr slår dørene op</a>
+                    <a href="#">Danmarks rigshospital for dyr slår dørene op. Her går man langt for dyrevelfærd. Hvad sker der hvis teksten er for lang?</a>
                     <div class="small">16. december 2017</div>
                 </li>
                 <li>
