--- a/docs/_includes/js/collapse.html
+++ b/docs/_includes/js/collapse.html
@@ -50,8 +50,7 @@
   <p>Extend the default collapse behavior to create an accordion with the panel component.</p>
 
   <div class="bs-example" data-example-id="collapse-accordion">
-    <button class="btn btn-default openall">Open all</button>
-    <button class="btn btn-default closeall">Close all</button>
+    <button class="btn btn-default toggleAccordions" data-da-open="Åbn alle" data-da-close="Luk alle" data-en-open="Expand all" data-en-close="Collapse all">Expand all</button>
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
       <div class="panel panel-accordion">
         <div class="panel-heading" role="tab" id="headingOne">
