--- a/less/variables.less
+++ b/less/variables.less
@@ -167,7 +167,7 @@
 //
 //## Global Google font is in bootstrap.less.
 
-@font-family-sans-serif:  "Open Sans", Helvetica, Arial, sans-serif;
+@font-family-sans-serif:  'Open Sans', Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
@@ -860,7 +860,7 @@
 @panel-heading-padding:       6px 10px;
 // KU specific
 @panel-bokstop-heading-padding: 8px 0;
-@panel-footer-padding:        6px 0;
+@panel-footer-padding:        6px 10px;
 @panel-border-radius:         @border-radius-base;
 
 //** Border color for elements within panels
