--- a/less/buttons.less
+++ b/less/buttons.less
@@ -1,8 +1,6 @@
 //
 // Buttons
 // --------------------------------------------------
-
-
 // Base styles
 // --------------------------------------------------
 
@@ -21,23 +19,23 @@
   .user-select(none);
 
   &,
-  &:active,
-  &.active {
-    &:focus,
-    &.focus {
+  &.active,
+  &:active {
+    &.focus,
+    &:focus {
       .tab-focus();
     }
   }
 
-  &:hover,
+  &.focus,
   &:focus,
-  &.focus {
+  &:hover {
     color: @btn-default-color;
     text-decoration: none;
   }
 
-  &:active,
-  &.active {
+  &.active,
+  &:active {
     outline: 0;
     background-image: none;
     .box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
@@ -51,7 +49,7 @@
     .box-shadow(none);
   }
 
-  a& {
+  a & {
     &.disabled,
     fieldset[disabled] & {
       pointer-events: none; // Future-proof disabling of clicks on `<a>` elements
@@ -61,79 +59,82 @@
   &.go-back {
     &::before {
       font-family: 'Glyphicons Halflings';
-      content:"\e079";
+      content: "\e079";
       margin-right: 2px;
     }
   }
 }
-
 // Alternate buttons
 // --------------------------------------------------
 
 .btn-default {
   .button-variant(@btn-default-color; @btn-default-bg; @btn-default-border);
 }
+
 .btn-primary {
   .button-variant(@btn-primary-color; @btn-primary-bg; @btn-primary-border);
 }
 // Success appears as green
+
 .btn-success {
   .button-variant(@btn-success-color; @btn-success-bg; @btn-success-border);
 }
 // Info appears as blue-green
+
 .btn-info {
   .button-variant(@btn-info-color; @btn-info-bg; @btn-info-border);
 }
 // Warning appears as orange
+
 .btn-warning {
   .button-variant(@btn-warning-color; @btn-warning-bg; @btn-warning-border);
 }
 // Danger and error appear as red
+
 .btn-danger {
   .button-variant(@btn-danger-color; @btn-danger-bg; @btn-danger-border);
 }
-
-
 // Link buttons
 // -------------------------
-
 // Make a button look and behave like a link
+
 .btn-link {
   color: @link-color;
   font-weight: normal;
   border-radius: 0;
 
   &,
-  &:active,
   &.active,
+  &:active,
   &[disabled],
   fieldset[disabled] & {
     background-color: transparent;
     .box-shadow(none);
   }
+
   &,
-  &:hover,
+  &:active,
   &:focus,
-  &:active {
+  &:hover {
     border-color: transparent;
   }
-  &:hover,
-  &:focus {
+
+  &:focus,
+  &:hover {
     color: @link-hover-color;
     text-decoration: @link-hover-decoration;
     background-color: transparent;
   }
+
   &[disabled],
   fieldset[disabled] & {
-    &:hover,
-    &:focus {
+    &:focus,
+    &:hover {
       color: @btn-link-disabled-color;
       text-decoration: none;
     }
   }
 }
-
-
 // Button Sizes
 // --------------------------------------------------
 
@@ -141,15 +142,15 @@
   // line-height: ensure even-numbered height of button next to large input
   .button-size(@padding-large-vertical; @padding-large-horizontal; @font-size-large; @line-height-large; @btn-border-radius-large);
 }
+
 .btn-sm {
   // line-height: ensure proper height of button next to small input
   .button-size(@padding-small-vertical; @padding-small-horizontal; @font-size-small; @line-height-small; @btn-border-radius-small);
 }
+
 .btn-xs {
   .button-size(@padding-xs-vertical; @padding-xs-horizontal; @font-size-small; @line-height-small; @btn-border-radius-small);
 }
-
-
 // Block button
 // --------------------------------------------------
 
@@ -157,17 +158,38 @@
   display: block;
   width: 100%;
 }
-
 // Vertically space out multiple block buttons
+
 .btn-block + .btn-block {
   margin-top: 5px;
 }
-
 // Specificity overrides
+
 input[type="submit"],
 input[type="reset"],
 input[type="button"] {
   &.btn-block {
     width: 100%;
+  }
+}
+// KU specific:
+.btn {
+  &.toggleAccordions {
+    position: relative;
+    padding-right: 25px;
+    .glyphicon-plus;
+
+    &:before {
+      .glyphicon;
+      position: absolute;
+      top: 48%;
+      right: 5px;
+      transform: translateY(-50%);
+      color: @gray-light;
+    }
+
+    &.expanded {
+      .glyphicon-minus;
+    }
   }
 }
