--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -225,9 +225,9 @@
     }
   }
 
-  .nyheder {
-    img {
-      margin: 5px 5px 5px 20px;
-    }
-  }
+  // .nyheder {
+  //   img {
+  //     margin: 5px 5px 5px 20px;
+  //   }
+  //}
 }
