--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -15,7 +15,7 @@
 .gridbox {
   width: 100%;
   position: relative;
-  line-height: @line-height-base;
+  line-height: @line-height-small;
   border-radius: 2px;
   display: flex;
   flex-direction: column;
