--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -119,6 +119,9 @@ nav {
     .flexiblebox-as-rightbox:first-child {
       margin-top: @grid-gutter-height;
     }
+    .rightbox-normal:first-child {
+      margin-top: 8px;
+    }
   }
 }
 // KU grid:
