New image alignment in flexbox

--- a/less/breadcrumbs.less
+++ b/less/breadcrumbs.less
@@ -9,7 +9,7 @@
 }
 @media (min-width: @screen-sm) {
   .breadcrumbs {
-    margin-top: @grid-gutter-height;
+    margin: @grid-gutter-height 0 5px 0;
     display: flex;
   }
 }
