--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -101,7 +101,7 @@ figcaption {
   caption-side: bottom;
 }
 
-.fritekst_over_img {
+.fritekst_over_img, .uden-boks-top {
   // Hack to hide titles i rightboxes
   position: absolute;
   margin-top: -39px;
