--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -15,6 +15,9 @@ position: fixed !important;
   z-index: 1030 !important;
 }
 
+.breadcrumb {
+margin-top: 23px;
+}
 /*
   * Sticky left menu - only for Docs section
   */
