--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -255,22 +255,24 @@
   &.with-img {
     // Boxes with img
     .box2 {
+      display: flex;
+      justify-content: center;
       position: relative;
       padding: 0 !important;
       overflow: hidden;
 
       img {
         // Img inside the box adjusted by height and centered
+        flex: none;
         display: block;
-        max-height: 100%;
-        // min-width: 100%;
-        max-width: none;
+        // position: absolute;
+        // top: 51%;
+        // left: 50%;
+        // max-height: 100%;
+        // max-width: none;
+        // transform: translateY(-51%) translateX(-50%) translate3d(0,0,0);
         -ms-interpolation-mode: bicubic;
         object-fit: cover;
-        position: absolute;
-        top: 51%;
-        left: 50%;
-        transform: translateY(-51%) translateX(-50%) translate3d(0,0,0);
         backface-visibility: hidden;
         filter: brightness(100%) blur(0);
         //image-rendering: -webkit-optimize-contrast;
@@ -279,6 +281,7 @@
     // Position image left
     &.img-left {
       img {
+        position: absolute;
         left: 0!important;
         transform: translateY(-50%) translateX(0) translate3d(0,0,0)!important;
       }
@@ -286,6 +289,7 @@
     // Position image right
     &.img-right {
       img {
+        position: absolute;
         left: auto!important;
         right: 0;
         transform: translateY(-50%) translateX(0) translate3d(0,0,0)!important;
@@ -446,14 +450,14 @@
   &.size2 {
     height: @gridbox2;
 
-    &.with-img {
-      .box2 {
-        img {
-          max-height: 100%;
-          max-width: none;
-        }
-      }
-    }
+    // &.with-img {
+    //   .box2 {
+    //     img {
+    //       max-height: 100%;
+    //       max-width: none;
+    //     }
+    //   }
+    // }
 
     &:not(.with-img) {
       .box1 {
@@ -861,20 +865,20 @@
     }
   }
 
-  .double-column [class*=column] {
-    .gridbox {
-      &.with-img {
-        .box2 {
-          img {
-            min-width: 100%;
-            top: 50%;
-            left: 50%;
-            transform: translateY(-50%) translateX(-50%) translate3d(0,0,0);
-          }
-        }
-      }
-    }
-  }
+  // .double-column [class*=column] {
+  //   .gridbox {
+  //     &.with-img {
+  //       .box2 {
+  //         img {
+  //           min-width: 100%;
+  //           top: 50%;
+  //           left: 50%;
+  //           transform: translateY(-50%) translateX(-50%) translate3d(0,0,0);
+  //         }
+  //       }
+  //     }
+  //   }
+  // }
   // Styling for full width boxes
   .single-column .column1 {
     .size1 {
