--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -40,8 +40,12 @@
       <li><a href="#">More links</a></li>
       <li><a href="#">One more link</a></li>
     </ul>
-    <hr class="menu-seperator">
     <ul id="leftmenu_2" class="nav">
+      <li><a href="#">Action</a></li>
+      <li><a href="#">Separated link</a></li>
+      <li><a href="#">One more separated link</a></li>
+    </ul>
+    <ul>
       <li><a href="#">Action</a></li>
       <li><a href="#">Separated link</a></li>
       <li><a href="#">One more separated link</a></li>
