--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -1,212 +1,290 @@
 //
 // KU left menu
 // --------------------------------------------------
-  .ku-leftmenu {
-    padding-top: 30px;
-    line-height: 1.333333;
-    .ku-navbar-header {
-      font-weight: bold;
-      line-height: 1;
-      margin-bottom: @grid-gutter-width;
-      padding-left: 6px;
-      border-left: 8px solid @ku-red;
+
+.ku-leftmenu {
+  padding-top: 30px;
+  line-height: 1.333333;
+
+  .ku-navbar-header {
+    font-weight: bold;
+    line-height: 1;
+    margin-bottom: @grid-gutter-width;
+    padding-left: 6px;
+    border-left: 8px solid @ku-red;
+
+    a {
+      color: inherit;
+
+      &:hover {
+        text-decoration: none;
+        color: @ku-red;
+      }
+    }
+
+    .theme-samf & {
+      border-left: 8px solid @samf;
 
       a {
-        color: inherit;
-
         &:hover {
-          text-decoration: none;
-          color: @ku-red;
+          color: @samf;
         }
       }
+    }
 
-      .theme-samf & {
-        border-left: 8px solid @samf;
+    .theme-hum & {
+      border-left: 8px solid @hum;
 
-        a {
-          &:hover {
+      a {
+        &:hover {
+          color: @hum;
+        }
+      }
+    }
+
+    .theme-science & {
+      border-left: 8px solid @science;
+
+      a {
+        &:hover {
+          color: @science;
+        }
+      }
+    }
+
+    .theme-sund & {
+      border-left: 8px solid @sund;
+
+      a {
+        &:hover {
+          color: @sund;
+        }
+      }
+    }
+
+    .theme-jur & {
+      border-left: 8px solid @jura;
+
+      a {
+        &:hover {
+          color: @jura;
+        }
+      }
+    }
+
+    .theme-teo & {
+      border-left: 8px solid @teol;
+
+      a {
+        &:hover {
+          color: @teol;
+        }
+      }
+    }
+  }
+  // All levels
+  ul {
+    li {
+      position: relative;
+      display: block;
+
+      &.active {
+        > a,
+        a.active {
+          color: @ku-red;
+
+          .theme-samf & {
             color: @samf;
           }
-        }
-      }
 
-      .theme-hum & {
-        border-left: 8px solid @hum;
-
-        a {
-          &:hover {
+          .theme-hum & {
             color: @hum;
           }
-        }
-      }
 
-      .theme-science & {
-        border-left: 8px solid @science;
-
-        a {
-          &:hover {
+          .theme-science & {
             color: @science;
           }
-        }
-      }
 
-      .theme-sund & {
-        border-left: 8px solid @sund;
-
-        a {
-          &:hover {
+          .theme-sund & {
             color: @sund;
           }
-        }
-      }
 
-      .theme-jur & {
-        border-left: 8px solid @jura;
-
-        a {
-          &:hover {
+          .theme-jur & {
             color: @jura;
           }
-        }
-      }
 
-      .theme-teo & {
-        border-left: 8px solid @teol;
-
-        a {
-          &:hover {
+          .theme-teo & {
             color: @teol;
           }
+          font-weight: bold;
         }
       }
-    }
-    // All levels
-    ul {
-      li {
+
+      a {
+        color: @gray-dark;
+        font-size: 1em;
+        padding: 3px 5px 3px 15px;
         position: relative;
-        display: block;
+        display: inline-block;
+        vertical-align: top;
 
-        &.active {
-          > a,
-          a.active {
-            color: @ku-red;
+        &:active,
+        &:focus,
+        &:hover {
+          color: @ku-red;
 
-            .theme-samf & {
-              color: @samf;
-            }
-
-            .theme-hum & {
-              color: @hum;
-            }
-
-            .theme-science & {
-              color: @science;
-            }
-
-            .theme-sund & {
-              color: @sund;
-            }
-
-            .theme-jur & {
-              color: @jura;
-            }
-
-            .theme-teo & {
-              color: @teol;
-            }
-            font-weight: bold;
+          .theme-samf & {
+            color: @samf;
           }
+
+          .theme-hum & {
+            color: @hum;
+          }
+
+          .theme-science & {
+            color: @science;
+          }
+
+          .theme-sund & {
+            color: @sund;
+          }
+
+          .theme-jur & {
+            color: @jura;
+          }
+
+          .theme-teo & {
+            color: @teol;
+          }
+          text-decoration: none;
         }
 
-        a {
-          color: @gray-dark;
-          font-size: 1em;
-          padding: 3px 5px 3px 15px;
-          position: relative;
-          display: inline-block;
-          vertical-align: top;
-
-          &:active,
-          &:focus,
-          &:hover {
-            color: @ku-red;
-
-            .theme-samf & {
-              color: @samf;
-            }
-
-            .theme-hum & {
-              color: @hum;
-            }
-
-            .theme-science & {
-              color: @science;
-            }
-
-            .theme-sund & {
-              color: @sund;
-            }
-
-            .theme-jur & {
-              color: @jura;
-            }
-
-            .theme-teo & {
-              color: @teol;
-            }
-            text-decoration: none;
-          }
-
-          &::before {
-            position: absolute;
-            left: 0;
-            top: 3px;
-          }
+        &::before {
+          position: absolute;
+          left: 0;
+          top: 3px;
         }
       }
     }
+  }
 
-    ul.nav {
-      //First level
-      > li {
-        > a {
+  ul.nav {
+    //First level
+    > li {
+      &.active {
+        &::before {
+          background-color: @ku-red;
+
+          .theme-samf & {
+            background-color: @samf;
+          }
+
+          .theme-hum & {
+            background-color: @hum;
+          }
+
+          .theme-science & {
+            background-color: @science;
+          }
+
+          .theme-sund & {
+            background-color: @sund;
+          }
+
+          .theme-jur & {
+            background-color: @jura;
+          }
+
+          .theme-teo & {
+            background-color: @teol;
+          }
+          color: @white-color;
+        }
+      }
+
+      > a {
+        &::before {
+          content: "\e080";
+          font-family: 'Glyphicons Halflings';
+          font-size: 7px;
+          color: @ku-red;
+          position: absolute;
+          left: 0;
+          top: 5px;
+
+          .theme-samf & {
+            color: @samf;
+          }
+
+          .theme-hum & {
+            color: @hum;
+          }
+
+          .theme-science & {
+            color: @science;
+          }
+
+          .theme-sund & {
+            color: @sund;
+          }
+
+          .theme-jur & {
+            color: @jura;
+          }
+
+          .theme-teo & {
+            color: @teol;
+          }
+          border: 1px solid #d7d7d7;
+        }
+
+        &:hover {
           &::before {
-            content: "\e080";
-            font-family: 'Glyphicons Halflings';
-            font-size: 7px;
-            color: @ku-red;
-            position: absolute;
-            left: 0;
-            top: 5px;
+            background-color: @ku-red;
 
             .theme-samf & {
-              color: @samf;
+              background-color: @samf;
             }
 
             .theme-hum & {
-              color: @hum;
+              background-color: @hum;
             }
 
             .theme-science & {
-              color: @science;
+              background-color: @science;
             }
 
             .theme-sund & {
-              color: @sund;
+              background-color: @sund;
             }
 
             .theme-jur & {
-              color: @jura;
+              background-color: @jura;
             }
 
             .theme-teo & {
-              color: @teol;
+              background-color: @teol;
             }
-            border: 1px solid #d7d7d7;
+            color: @white-color;
           }
+        }
+      }
 
-          &:hover {
+      ul {
+        // Second level
+        list-style-type: none;
+        padding-left: 15px;
+
+        li {
+          > a {
+            padding: 2px 5px 2px 10px;
+            display: block;
+
             &::before {
+              content: "";
+              height: 4px;
+              width: 4px;
+              top: 7px;
               background-color: @ku-red;
 
               .theme-samf & {
@@ -232,82 +310,36 @@
               .theme-teo & {
                 background-color: @teol;
               }
-              color: @white-color;
+            }
+
+            &:hover::before {
+              text-decoration: none;
             }
           }
-        }
 
-        ul {
-          // Second level
-          list-style-type: none;
-          padding-left: 15px;
+          ul {
+            // Third level
+            padding-left: 10px;
 
-          li {
-            > a {
-              padding: 2px 5px 2px 10px;
-              display: block;
-
-              &::before {
-                content: "";
-                height: 4px;
-                width: 4px;
-                top: 7px;
-                background-color: @ku-red;
-
-                .theme-samf & {
-                  background-color: @samf;
-                }
-
-                .theme-hum & {
-                  background-color: @hum;
-                }
-
-                .theme-science & {
-                  background-color: @science;
-                }
-
-                .theme-sund & {
-                  background-color: @sund;
-                }
-
-                .theme-jur & {
-                  background-color: @jura;
-                }
-
-                .theme-teo & {
-                  background-color: @teol;
+            li {
+              > a {
+                &::before {
+                  height: 3px;
+                  width: 3px;
+                  top: 8px;
                 }
               }
 
-              &:hover::before {
-                text-decoration: none;
-              }
-            }
+              ul {
+                // Fourth level
+                li {
+                  > a {
+                    padding-left: 9px;
 
-            ul {
-              // Third level
-              padding-left: 10px;
-
-              li {
-                > a {
-                  &::before {
-                    height: 3px;
-                    width: 3px;
-                    top: 8px;
-                    }
-                  }
-
-                ul {
-                  // Fourth level
-                  li {
-                    > a {
-                      padding-left: 9px;
-
-                      &::before {
-                        height: 2px;
-                        width: 2px;
-                        top: 9px;
-                      }
+                    &::before {
+                      height: 2px;
+                      width: 2px;
+                      top: 9px;
                     }
                   }
                 }
@@ -315,21 +347,17 @@
             }
           }
         }
-      }
-    }
-
-    // .menu-seperator {
-    //   margin: @margin20 0;
-    // }
-
-    & > ul {
-      & + ul {
-        border-top: 1px solid @gray;
-        margin-top: @margin20;
       }
     }
   }
-
+}
+#leftmenu_2 {
+  // Extra menus
+  & + ul {
+    border-top: 1px solid @gray;
+    margin-top: @margin20;
+  }
+}
 // Left menu slide in/out for mobiles
 @media (max-width: @screen-xs-max) {
   html:not(.non-responsive) {
@@ -351,7 +379,8 @@
       background-color: @navbar-inverse-toggle-hover-bg;
     }
 
-    &:focus, &:active, {
+    &:active,
+    &:focus {
       background-color: @gray-light;
     }
   }
