--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -41,7 +41,7 @@
   }
 
   .entry {
-    flex: 1;
+    flex: 1 1 auto;
     min-width: 0;
     text-align: left;
     border-bottom: 1px solid @white-color;
