--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -9,7 +9,7 @@
   .ku-navbar-header {
     font-weight: bold;
     line-height: 1;
-    margin-bottom: @grid-gutter-width;
+    margin-bottom: 30px;
     padding-left: 6px;
     border-left: 8px solid @ku-red;
 
@@ -359,9 +359,24 @@
   // Extra menus
   border-top: 1px solid @gray;
   margin-top: @margin20;
+  padding-left: 0;
+
+  li {
+    &:first-child {
+      padding-top: 20px;
+    }
+  }
+
   & + ul {
     border-top: 1px solid @gray;
     margin-top: @margin20;
+    padding-left: 0;
+
+    li {
+      &:first-child {
+        padding-top: 20px;
+      }
+    }
   }
 }
 // Left menu slide in/out for mobiles
