--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -279,22 +279,22 @@
       }
     }
     // Position image left
-    &.img-left {
-      img {
-        position: absolute;
-        left: 0!important;
-        transform: translateY(-50%) translateX(0) translate3d(0,0,0)!important;
-      }
-    }
+    // &.img-left {
+    //   img {
+    //     position: absolute;
+    //     left: 0!important;
+    //     transform: translateY(-50%) translateX(0) translate3d(0,0,0)!important;
+    //   }
+    // }
     // Position image right
-    &.img-right {
-      img {
-        position: absolute;
-        left: auto!important;
-        right: 0;
-        transform: translateY(-50%) translateX(0) translate3d(0,0,0)!important;
-      }
-    }
+    // &.img-right {
+    //   img {
+    //     position: absolute;
+    //     left: auto!important;
+    //     right: 0;
+    //     transform: translateY(-50%) translateX(0) translate3d(0,0,0)!important;
+    //   }
+    // }
   }
 
   &:not(.with-img) {
