--- a/less/type.less
+++ b/less/type.less
@@ -65,6 +65,8 @@ h1 {
   font-size: @font-size-h1;
   margin-top: 5px;
   font-weight: 400;
+  // KU: 
+  line-height: @line-height-small;
 }
 
 .h2,
