--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -209,6 +209,7 @@
           content: "\e080";
           font-family: 'Glyphicons Halflings';
           font-size: 7px;
+          font-weight: 400;
           color: @ku-red;
           position: absolute;
           left: 0;
