--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -54,12 +54,12 @@ nav {
     }
   }
 
-  ol,
-  ul {
-    li {
-      line-height: 2;
-    }
-  }
+  // ol,
+  // ul {
+  //   li {
+  //     line-height: 2;
+  //   }
+  // }
 }
 
 #main-content > p:first-child {
