--- a/less/ku-legacy.less
+++ b/less/ku-legacy.less
@@ -1,5 +1,5 @@
 //
-// CSS for legacy CMS elements - delete when nesseary.
+// CSS for legacy CMS elements - delete when not necessary.
 // --------------------------------------------------
 
 // Gamle nyhedsbokse
@@ -27,4 +27,9 @@
       }
     }
   }
+}
+
+// Banner doctype
+#banners-3col {
+  padding: 0;
 }
