--- a/less/variables.less
+++ b/less/variables.less
@@ -472,6 +472,7 @@
 @grid-gutter-height:        23px;
 // KU specific:
 @grid-gutter-by-half:       floor((@grid-gutter-width / 2));
+@default-col-width:         235px;
 
 // Navbar collapse
 //** Point at which the navbar becomes uncollapsed.
