--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -42,6 +42,9 @@ margin-top: 23px;
           transition: position .25s linear;
 } */
 
+.bs-docs-container {
+padding-bottom: 23px;
+}
 /* Keep code small in tables on account of limited space */
 
 .table code {
@@ -1300,7 +1303,7 @@ display: block;
   border-radius: 4px;
 }
 
-.visible-on .col-xs-6 .hidden-xs, .visible-on .col-xs-6 .hidden-sm, .visible-on .col-xs-6 .hidden-md, .visible-on .col-xs-6 .hidden-lg, .hidden-on .col-xs-6 .hidden-xs, .hidden-on .col-xs-6 .hidden-sm, .hidden-on .col-xs-6 .hidden-md, .hidden-on .col-xs-6 .hidden-lg {
+.visible-on .col-xs-6 .hidden-xs, .visible-on .col-xs-6 .hidden-sm, .visible-on .col-xs-6 .hidden-md, .visible-on .col-xs-6 .hidden-lg, .hidden-on .col-xs-6 .hidden-xs, .hidden-on .col-xs-6 .hidden-sm, .hidden-on .col-xs-6 .hidden-md, .hidden-on .col-xs-6 .hidden-lg, .visible-on .col-sm-12 > div {
 color: #999;
   border: 1px solid #ddd;
 }
@@ -1310,7 +1313,10 @@ color: #468847;
   background-color: #dff0d8;
   border: 1px solid #d6e9c6;
 }
-
+.responsive-utilities-test.visible-on > .col-sm-12 {
+padding: 10px;
+  color: #252525;
+}
 /*
  * Glyphicons
  *
