--- a/less/variables.less
+++ b/less/variables.less
@@ -193,7 +193,7 @@
 //** By default, this inherits from the `<body>`.
 @headings-font-family:    inherit;
 @headings-font-weight:    600;
-@headings-line-height:    1.1;
+@headings-line-height:    @line-height-small;
 @headings-color:          inherit;
 
 
