--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -87,6 +87,9 @@ nav {
         margin-top: @grid-gutter-height;
       }
     }
+    + .row {
+      margin-top: @grid-gutter-height;
+    }
   }
 }
 
