--- a/docs/_includes/components/advanced-lists.html
+++ b/docs/_includes/components/advanced-lists.html
@@ -1,7 +1,7 @@
 <div class="bs-docs-section">
   <h1 id="advanced-lists" class="page-header">KU Advanced lists</h1>
   <h2 id="advanced-lists-default">Default advanced lists</h2>
-  <p>List items with images which can be used to present a list of subjects.<br>Images will be hidden in mobile view. Add links inside the content if needed.</p>
+  <p>List items with images which can be used to present a list of subjects.<br>Add links inside the content if needed.</p>
   <div class="bs-example" data-example-id="advanced-lists">
     <ul class="advanced-list">
       <li>
