--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -73,4 +73,5 @@
 //@import "ku-gridboxes-bootstrap.less";
 @import "ku-misc.less";
 @import "ku-legacy.less";
+@import "ku-custom-elements.less";
 @import "ku-editor-overrides.less";
