--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -171,7 +171,7 @@
   ul {
     //First level
     > li {
-      &.active {
+      &.active, &.active-sub {
         > a {
           &::before {
             background-color: @ku-red;
