--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -17,9 +17,7 @@
 
     .search-text {
       color: #565656;
-      margin-top: 18px;
-      margin-bottom: 30px !important;
-      margin-left: 15px;
+      margin: 15px 5px 20px 15px;
       font-weight: 600;
       font-size: 18px;
 
@@ -31,10 +29,15 @@
 
   form {
     width: 94%;
+    margin: 0 auto;
+
 
     .input-group {
+      border: 1px solid @gray-666;
+      border-radius: @border-radius-base;
       input[type="text"] {
         opacity: 0.85;
+        border: 0;
       }
 
       .input-group-btn {
