--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -6,7 +6,7 @@
   position: relative;
   overflow: hidden;
 
-  &-bg {
+  &[class$="-bg"] {
     width: 100%;
     height: 130px;
     margin-bottom: 0 !important;
@@ -14,7 +14,7 @@
     background-size: 140px;
 
     .search-text {
-      margin: 15px 5px 20px 15px;
+      margin: 20px 5px 20px 15px;
       font-weight: 600;
       font-size: 18px;
 
