--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -6,7 +6,7 @@
   position: relative;
   overflow: hidden;
 
-  &[class$="-bg"] {
+  [class$="-bg"] {
     width: 100%;
     height: 130px;
     margin-bottom: 0 !important;
