--- a/docs/_includes/css/responsive-utilities.html
+++ b/docs/_includes/css/responsive-utilities.html
@@ -156,27 +156,15 @@
   <h2 id="responsive-utilities-tests">Test cases</h2>
   <p>Resize your browser or load on different devices to test the responsive utility classes.</p>
 
-  <h3>Visible on...</h3>
-  <div class="row responsive-utilities-test visible-on">
-    <div class="col-sm-12">
-      <div class="visible-xs-block hidden-sm hidden-md hidden-lg">Visible on Mobile</div>
-    </div>
-    <div class="col-sm-12">
-      <div class="visible-xs-block visible-sm-block hidden-md hidden-lg">Visible on Mobile and tablet</div>
-    </div>
-    <div class="col-sm-12">
-      <div class="visible-xs-block hidden-sm hidden-md visible-lg-block">Visible on Mobile and desktop</div>
-    </div>
-    <div class="col-sm-12">
-      <div class="hidden-xs visible-sm-block hidden-md hidden-lg">Visible on Tablet</div>
-    </div>
-    <div class="col-sm-12">
-      <div class="hidden-xs hidden-sm visible-md-block visible-lg-block">Visible on Tablet and desktop</div>
-    </div>
-    <div class="col-sm-12">
-      <div class="hidden-xs hidden-sm hidden-md visible-lg-block">Visible on Desktop</div>
-    </div>
-  </div>
+  <h3>Visible on... examples with classes</h3>
+  {% highlight html %}
+<div class="visible-xs-block hidden-sm hidden-md hidden-lg">Mobile</div>
+<div class="visible-xs-block visible-sm-block hidden-md hidden-lg">Mobile and tablet</div>
+<div class="visible-xs-block hidden-sm hidden-md visible-lg-block">Mobile and desktop</div>
+<div class="hidden-xs visible-sm-block hidden-md hidden-lg">Tablet</div>
+<div class="hidden-xs hidden-sm visible-md-block visible-lg-block">Tablet and desktop</div>
+<div class="hidden-xs hidden-sm hidden-md visible-lg-block">Desktop</div>
+  {% endhighlight %}
 
   <p>Green checkmarks indicate the element <strong>is visible</strong> in your current viewport.</p>
   <div class="row responsive-utilities-test visible-on">
