--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -199,7 +199,7 @@
             .theme-teo & {
               background-color: @teol;
             }
-            color: @white-color;
+            color: @white-color!important;
           }
         }
       }
