--- a/docs/_includes/js/tabs.html
+++ b/docs/_includes/js/tabs.html
@@ -49,14 +49,14 @@
   <p>Enable tabbable tabs via JavaScript (each tab needs to be activated individually):</p>
 
 {% highlight js %}
-&lt;script&gt;
+<script>
 $(function() {
   $('#tabslist a').click(function (e) {
     e.preventDefault()
     $(this).tab('show')
   })
 });
-&lt;/script&gt;
+</script>
 {% endhighlight %}
 
   <p>You can activate individual tabs in several ways:</p>
