--- a/docs/examples/offcanvas/offcanvas.css
+++ b/docs/examples/offcanvas/offcanvas.css
@@ -4,13 +4,16 @@
  */
 html,
 body {
-overflow-x: hidden; /* Prevent scroll on narrow devices */
+  overflow-x: hidden;
+  /* Prevent scroll on narrow devices */
 }
+
 body {
-padding-top: 70px;
+  padding-top: 70px;
 }
+
 footer {
-padding: 30px 0;
+  padding: 30px 0;
 }
 
 /*
@@ -18,40 +21,43 @@ padding: 30px 0;
  * --------------------------------------------------
  */
 @media screen and (max-width: 767px) {
-.row-offcanvas {
-position: relative;
+  .row-offcanvas {
+    position: relative;
     transition: all .25s ease-out;
   }
 
   .row-offcanvas-right {
-right: 0;
+    right: 0;
   }
 
   .row-offcanvas-left {
-left: 0;
+    left: 0;
   }
 
-  .row-offcanvas-right
-  .sidebar-offcanvas {
-right: -50%; /* 6 columns */
+  .row-offcanvas-right .sidebar-offcanvas {
+    right: -50%;
+    /* 6 columns */
   }
 
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-left: -50%; /* 6 columns */
+  .row-offcanvas-left .sidebar-offcanvas {
+    left: -50%;
+    /* 6 columns */
   }
 
   .row-offcanvas-right.active {
-right: 50%; /* 6 columns */
+    right: 50%;
+    /* 6 columns */
   }
 
   .row-offcanvas-left.active {
-left: 50%; /* 6 columns */
+    left: 50%;
+    /* 6 columns */
   }
 
   .sidebar-offcanvas {
-position: absolute;
+    position: absolute;
     top: 0;
-    width: 50%; /* 6 columns */
+    width: 50%;
+    /* 6 columns */
   }
 }
