--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -2,6 +2,11 @@
 <html class="ku-bs theme-faelles {% if page.category == 'non-responsive' %}non-responsive{% endif %}" lang="{% if page.category == 'kurser' %}da{% else %}en{% endif %}">
   <head>
     {% include header.html %}
+    <style>
+    .breadcrumb {
+      margin-top: 23px;
+    }
+    </style>
   </head>
   <body class="{% if site.github %}{% else %}ku-docs{% endif %}{% if page.category == 'forms' %} Form{% endif %}">
     <nav class="jumpbox" aria-label="Spring til indhold på Siden" title="Spring til Indhold på Siden">
