--- a/docs/assets/css/datatables/datatables.css
+++ b/docs/assets/css/datatables/datatables.css
@@ -25,7 +25,7 @@
   clear: both;
   margin-top: 6px !important;
   margin-bottom: 6px !important;
-  max-width: none !important;
+  /* max-width: none !important; */
   /*border-collapse: separate !important;*/
 }
 .dataTable>tbody>tr:hover {
