--- a/docs/assets/css/slider/slick-theme.css
+++ b/docs/assets/css/slider/slick-theme.css
@@ -108,8 +108,8 @@
 .slick-slider .text-bottom.caption {
   bottom: 0;
   left: 0;
-  color: #fff;
-  background: rgba(64, 116, 157, .8);
+  color: #252525;
+  background: rgba(255, 255, 255, .7);
 }
 
 .slick-slider .text-right-short.caption {
