--- a/less/ku-advanced-lists.less
+++ b/less/ku-advanced-lists.less
@@ -25,6 +25,7 @@
     }
 
     .list-content {
+      flex: 1;
       order: 2;
       padding: 15px;
       line-height: @line-height-small;
@@ -58,6 +59,7 @@
 
       .advanced-link {
         flex-direction: row;
+        flex: 1;
       }
 
       .list-img {
