--- a/docs/assets/css/datatables/datatables.css
+++ b/docs/assets/css/datatables/datatables.css
@@ -9,19 +9,31 @@
  * Included libraries:
  *   DataTables 1.10.13, FixedHeader 3.1.2, Responsive 2.1.1
  */
-
- /* KU */
+/* KU */
 .dataTables_wrapper tfoot {
-    display: table-header-group;
+  display: table-header-group;
 }
-.dataTables_wrapper tbody +tfoot {
+
+.dataTables_wrapper tbody+tfoot {
   /* Hide bottom tfoot */
-    display: none;
+  display: none;
 }
-.dataTables_wrapper tfoot th input {
+
+.dataTables_wrapper thead+tfoot {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .dataTables_wrapper thead+tfoot {
+    display: table-header-group;
+  }
+
+  .dataTables_wrapper tfoot th input {
     font-weight: normal;
-    width: 100%!important;
+    width: 100% !important;
+  }
 }
+
 .dataTable {
   clear: both;
   margin-top: 6px !important;
@@ -30,6 +42,7 @@
   word-wrap: break-word;
   /*border-collapse: separate !important;*/
 }
+
 .dataTable>tbody>tr:hover {
   background-color: #f5f5f5;
 }
@@ -37,7 +50,6 @@
 /* .dataTable td, .dataTable th {
   box-sizing: content-box;
 } */
-
 .dataTable td.dataTables_empty, .dataTable th.dataTables_empty {
   text-align: center;
 }
@@ -121,11 +133,12 @@
   right: 8px;
   display: block;
   font-family: 'Glyphicons Halflings';
-  opacity: 0.5;
+  font-weight: 400;
+  color: #888;
 }
 
 .dataTable thead .sorting:after {
-  opacity: 0.2;
+  color: #d3d3d3;
   content: "\e150";
   /* sort */
 }
@@ -248,7 +261,7 @@
 .dataTable.dtr-inline.collapsed>tbody>tr>td:first-child:before, .dataTable.dtr-inline.collapsed>tbody>tr>th:first-child:before {
   bottom: 9px;
   left: 11px;
-  height: 14px;
+  height: 20px;
   width: auto;
   display: block;
   position: absolute;
@@ -276,7 +289,7 @@
 .dataTable.dtr-inline.collapsed>tbody>tr>td:not(.child):first-child:after, .dataTable.dtr-inline.collapsed>tbody>tr>th:not(.child):first-child:after {
   bottom: 9px;
   left: 33px;
-  height: 14px;
+  height: 20px;
   width: auto;
   display: block;
   position: absolute;
@@ -308,9 +321,10 @@ html:lang(en) .dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:aft
   content: "Hide details";
 }
 
-.dataTable >tbody>tr>td.dataTables_empty:after {
+.dataTable>tbody>tr>td.dataTables_empty:after {
   display: none;
 }
+
 .dataTable.dtr-inline.collapsed>tbody>tr>td.child:first-child {
   padding-bottom: 10px;
 }
@@ -369,6 +383,7 @@ html:lang(en) .dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:aft
   background-color: #fff;
   border: 1px solid #ddd;
 }
+
 .dataTable>tbody>tr.parent {
   /* KU: Open table row */
   border: 1px solid #ddd;
