Mobile menu styling

--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -4,7 +4,7 @@
 
 .ku-leftmenu {
   padding-top: 30px;
-  line-height: 1.333333;
+  line-height: @line-height-small;
 
   .ku-navbar-header {
     font-weight: bold;
