--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -135,3 +135,11 @@
     }
   }
 }
+
+// Editor accordions popup dialog
+body {
+  &.editor-accordions {
+    background-color: #fbfbf7;
+    padding: 0px 15px;
+  }
+}
