--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -141,5 +141,8 @@ body {
   &.editor-accordions {
     background-color: #fbfbf7;
     padding: 0px 15px;
+    .mce-tinymce.mce-container.mce-panel {
+      max-width: 100%;
+    }
   }
 }
