--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -71,11 +71,17 @@ img {
   &.img-left {
     float: left;
     margin: 5px 20px 10px 0;
+    &+* {
+      clear: both;
+    }
   }
 
   &.img-right {
     float: right;
     margin: 5px 0 10px 20px;
+    &+* {
+      clear: both;
+    }
   }
   &.img-default {
     // "På linje med tekst"
