--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -4,6 +4,7 @@
   </div>
   <nav>
     <ul id="leftmenu" class="nav">
+      <li><a href="../ku-global-menus/">Global menus (top and footer)</a>
       <li><a href="../ku-full-page/">Front page</a></li>
       <li><a href="#">KU page templates</a>
         <ul>
