--- a/less/breadcrumbs.less
+++ b/less/breadcrumbs.less
@@ -9,7 +9,8 @@
 }
 @media (min-width: @screen-sm) {
   .breadcrumbs {
-    margin: @grid-gutter-height 0 10px 0;
+    margin-top: @grid-gutter-height;
+    margin-bottom: 10px;;
     display: flex;
   }
 }
