--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -878,7 +878,7 @@
         }
 
         .box1 {
-          padding: 0 0 5px @grid-gutter-by-half;
+          padding: 0 0 5px @grid-gutter-height;
           flex: 0 1 51.6%;
           max-width: 390px; // preventing that too much text will expand this box
           order: 2;
@@ -928,7 +928,7 @@
       &.img-flip-right {
         .box1 {
           padding-left: 0;
-          padding-right: @grid-gutter-by-half;
+          padding-right: @grid-gutter-height;
         }
 
         .box2 {
