--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -29,7 +29,7 @@
     max-height: @ku-branding-box-height;
     position: absolute;
     left: 90px;
-    bottom: 16px;
+    bottom: 10px;
     letter-spacing: 0.936px;
     padding-right: 10px;
     a {
@@ -40,6 +40,7 @@
       font-size: 1.1em;
       @media (min-width: @screen-sm-min) {
         font-size: @ku-branding-text-font-size;
+        line-height: 1.2;
       }
     }
 
