--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -13,6 +13,7 @@
 
   .media {
     border-bottom: 1px solid @gray;
+    padding-bottom: 5px;
 
     .media-heading {
       .nyhedsoverskrift();
@@ -74,7 +75,7 @@
       color: @gray-light;
     }
     .news-teaser {
-      margin-top: 0;
+      margin-top: 3px;
     }
   }
 }
