--- a/docs/_includes/js/tooltips.html
+++ b/docs/_includes/js/tooltips.html
@@ -1,4 +1,9 @@
 <div class="bs-docs-section">
+  <script>
+  $(function () {
+    $('[data-toggle="tooltip"]').tooltip()
+  })
+  </script>
   <h1 id="tooltips" class="page-header">Tooltips <small>tooltip.js</small></h1>
   <p>Inspired by the excellent jQuery.tipsy plugin written by Jason Frame; Tooltips are an updated version, which don't rely on images, use CSS3 for animations, and data-attributes for local title storage.</p>
   <p>Tooltips with zero-length titles are never displayed.</p>
