--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -96,7 +96,7 @@ figure img {
 .figure-caption,
 figcaption {
   font-size: @figure-caption-font-size;
-  color: @gray-light;
+  color: @gray-666;
   border-bottom: 1px solid @figure-caption-border-color;
   padding: 10px 10px 10px 0;
   width: 100%;
