--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -149,3 +149,15 @@
     }
   }
 }
+
+.manchet {
+  font-weight: 700;
+  h3 {
+    color: #808080;
+    font-weight: 700;
+    font-size: 1em;
+    display: inline;
+    padding-right: 5px;
+    text-transform: uppercase;
+  }
+}
