--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -74,6 +74,7 @@
       line-height: 15px;
       color: @gray-light;
     }
+
     .news-teaser {
       margin-top: 3px;
     }
@@ -122,11 +123,10 @@
 .readAll {
   margin-bottom: 0;
 }
-
 // Search news forms
-
 .search-news {
   padding: 5px 15px!important;
+
   form {
     display: flex;
     @media only screen and (min-width: @screen-sm-max) {
@@ -152,6 +152,7 @@
 
 .manchet {
   font-weight: 700;
+
   h3 {
     color: #808080;
     font-weight: 700;
@@ -159,5 +160,10 @@
     display: inline;
     padding-right: 5px;
     text-transform: uppercase;
+  }
+
+  p {
+    display: inline;
+    letter-spacing: 0.3px;
   }
 }
