--- a/less/panels.less
+++ b/less/panels.less
@@ -36,7 +36,10 @@
 .panel-title {
   margin-top: 0;
   margin-bottom: 0;
-  font-size: 16px;
+  font-size: 18px;
+  @media (min-width: @screen-md-min) {
+    font-size: 16px;
+  }
   font-weight: 600;
   letter-spacing: 0.25px;
   color: inherit;
