--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -40,15 +40,18 @@
     }
 
     .ku-branding-text-major {
-      font-size: 1.1em;
+      font-size: 13px;
+      line-height: 1.2;
       @media (min-width: @screen-sm) {
         font-size: @ku-branding-text-font-size;
-        line-height: 1.2;
       }
     }
 
     .ku-branding-text-sub {
-      font-size: @font-size-large;
+      font-size: @font-size-base;
+      @media (min-width: @screen-sm) {
+        font-size: @font-size-large;
+      }
     }
 
     a {
