--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -214,10 +214,10 @@
           font-size: 7px;
           font-weight: 700;
           height: 10px;
-          width: 8px;
+          width: 9px;
           line-height: 10px;
           display: inline-block;
-          padding: 0;
+          padding: 0 1px 0 0;
           font-style: normal;
           border-radius: 2px;
           content: "\e258";
