--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -354,7 +354,7 @@
   // Boxes with the text above the content
   &.text-over {
     .header {
-      position: absolute;
+      position: relative;
       left: 0;
       right: 0;
       bottom: 0;
